test(fuzz): make fuzzer non-interactive (no SAVE/RESUME by default); remove Dummy.java